first implementation for sql, field support still doesnt work